# HMIEmulator

./: .gitignore  .gitmodules  AddCommand.h  CMakeLists.txt  Command.h  CommandCollection.h  Control.h  ControlChain.h  ControlCollection.h  Hmi.h  HmiCommand.h  HmiCommandCollection.h  ISerial.h  LICENSE  NotSupportedCommand.h  PingCommand.h  PosixTimer.cpp  ResponseCommand.h  Serial.h  SerialLinuxDev.h  SerialTNT3.h  Tokenizer.h  config.h  main.cpp  mod-hardware-descriptor.json  readme.md
Commands/: AddControlCommand.h  NotSupportedCommand.h  PingCommand.h  RemoveControlCommand.h  SetControlValueCommand.h
HmiCommands/: AddControlCommand.h  NotSupportedCommand.h  PingCommand.h  RemoveControlCommand.h  ResponseCommand.h  SetControlValueCommand.h
